COMMITS